Fix missing background when run on Netlify (#110)

--- a/src/scss/components/_endOfGameModalContent.scss
+++ b/src/scss/components/_endOfGameModalContent.scss
@@ -5,7 +5,7 @@
   align-items: center;
   height: 100%;
   border-radius: 10px;
-  background-image: url('../../../public/images/modal-endofgame-image.png');
+  background-image: url(/images/modal-endofgame-image.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
